# colcon-zsh

./: .travis.yml  README.rst  appveyor.yml  setup.cfg  stdeb.cfg
colcon_zsh/shell/: zsh.py
colcon_zsh/shell/template/: package.zsh.em  prefix.zsh.em  prefix_chain.zsh.em
test/: spell_check.words  test_flake8.py  test_spell_check.py
