[metadata]
name = colcon-zsh
version = attr: colcon_zsh.__version__
url = https://colcon.github.io
download_url = https://github.com/colcon/colcon-zsh/releases
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to provide Z shell scripts.
keywords = colcon

[options]
install_requires =
  colcon-core
packages = find:
tests_require =
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = false

[options.entry_points]
colcon_core.shell =
    zsh = colcon_zsh.shell.zsh:ZShell

[options.package_data]
colcon_zsh.shell.template = *.em
