[metadata]
name = colcon-zsh
version = attr: colcon_zsh.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-zsh/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-zsh/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to provide Z shell scripts.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core>=0.4.0
packages = find:
tests_require =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2
zip_safe = false

[tool:pytest]
filterwarnings =
    error
junit_suite_name = colcon-zsh

[options.entry_points]
colcon_core.shell =
    zsh = colcon_zsh.shell.zsh:ZShell

[options.package_data]
colcon_zsh.shell.template = *.em

[flake8]
import-order-style = google
